# business-activity-visualiser

./: .env  .gitignore  .travis.yml  Procfile  README.md  database.js  launch.sh  main.js  package-lock.json  package.json  test.js
.github/workflows/: pytesting.yml
.heroku/: run.sh
data/: E92000001.json  Pipfile  data_cleaning.ipynb  datasheets.ipynb  pyproject.toml  readexcel.py  test_db.py  testdb.py  ukbusinessworkbook2021.xlsx
data/excel-files/: Counties_and_Unitary_Authorities_(May_2021)_UK_BFC.csv  LAD21_LAU121_ITL321_ITL221_ITL121_UK_LU.xlsx  Ward_to_Local_Authority_District_to_County_to_Region_to_Country__December_2020__Lookup_in_United_Kingdom_V2.csv  internetaccessconfidenceintervals2020final.xls  laregionlookup2013_tcm77-368312.xls  ukbusinessworkbook2021.xlsx
data/excel-files/codingandnamingpolicyforukstatisticalgeographies/: Coding_and_Naming_policy_for_UK_Statistical_Geographies_metadata.xml
