[tool.poetry]
name = "business-activity-visualiser-data"
version = "0.1.0"
description = ""
authors = ["not-relevant-is-it <joel.edwardson1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
openpyxl = "^3.0.9"
jupyterlab = "^3.1.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
