[tool.poetry]
name = "business-activity-visualiser-data"
version = "0.1.0"
description = ""
authors = ["not-relevant-is-it <joel.edwardson1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
pandas = "^1.3.3"
openpyxl = "^3.0.9"
jupyterlab = "^3.1.18"
SQLAlchemy = "^1.4.25"
rdflib = "^6.0.2"
SPARQLWrapper = "^1.8.5"
geojson = "^2.5.0"
Shapely = "^1.7.1"
plotly = "^5.3.1"
tqdm = "^4.62.3"
xlrd = "^2.0.1"
pytest = "^6.2.5"
setuptools = "^59.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
